Document retrieval-Assignment. Answer question 9

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 4/Document retrieval-Assignment.ipynb
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -2337,6 +2337,108 @@
    "metadata": {},
    "source": [
     "Mary Fitzgerald (artist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. Who is the nearest neighbor to 'Victoria Beckham' using TF-IDF?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Starting pairwise querying.\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | Query points | # Pairs | % Complete. | Elapsed Time |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n",
+      "PROGRESS: | 0            | 1       | 0.00169288  | 19.92ms      |\n",
+      "PROGRESS: | Done         |         | 100         | 245.812ms    |\n",
+      "PROGRESS: +--------------+---------+-------------+--------------+\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\"><table frame=\"box\" rules=\"cols\">\n",
+       "    <tr>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">query_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">reference_label</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">distance</th>\n",
+       "        <th style=\"padding-left: 1em; padding-right: 1em; text-align: center\">rank</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Victoria Beckham</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Cheryl Cole</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.800586510264</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Heidi Klum</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.810344827586</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Simon Fuller</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.822742474916</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">Adele</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">0.824915824916</td>\n",
+       "        <td style=\"padding-left: 1em; padding-right: 1em; text-align: center; vertical-align: top\">5</td>\n",
+       "    </tr>\n",
+       "</table>\n",
+       "[5 rows x 4 columns]<br/>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Columns:\n",
+       "\tquery_label\tint\n",
+       "\treference_label\tstr\n",
+       "\tdistance\tfloat\n",
+       "\trank\tint\n",
+       "\n",
+       "Rows: 5\n",
+       "\n",
+       "Data:\n",
+       "+-------------+------------------+----------------+------+\n",
+       "| query_label | reference_label  |    distance    | rank |\n",
+       "+-------------+------------------+----------------+------+\n",
+       "|      0      | Victoria Beckham |      0.0       |  1   |\n",
+       "|      0      |   Cheryl Cole    | 0.800586510264 |  2   |\n",
+       "|      0      |    Heidi Klum    | 0.810344827586 |  3   |\n",
+       "|      0      |   Simon Fuller   | 0.822742474916 |  4   |\n",
+       "|      0      |      Adele       | 0.824915824916 |  5   |\n",
+       "+-------------+------------------+----------------+------+\n",
+       "[5 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model.query(viki)"
    ]
   },
   {
