--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 6/Deep Features for Image Classification-Assignment.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 6/Deep Features for Image Classification-Assignment.ipynb
@@ -737,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Compute test_data accuracy of deep_features_model\n",
+    "# Compute test_data accuracy of deep_features_model\n",
     "\n",
     "As we can see, deep features provide us with significantly better accuracy (about 78%)"
    ]
@@ -752,9 +752,9 @@
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.788, 'confusion_matrix': Columns:\n",
-       " \ttarget_label\tint\n",
-       " \tpredicted_label\tint\n",
+       "{'accuracy': 0.792, 'auc': 0.9421761249999989, 'confusion_matrix': Columns:\n",
+       " \ttarget_label\tstr\n",
+       " \tpredicted_label\tstr\n",
        " \tcount\tint\n",
        " \n",
        " Rows: 16\n",
@@ -763,18 +763,45 @@
        " +--------------+-----------------+-------+\n",
        " | target_label | predicted_label | count |\n",
        " +--------------+-----------------+-------+\n",
-       " |      0       |        2        |   12  |\n",
-       " |      2       |        0        |   39  |\n",
-       " |      1       |        2        |  115  |\n",
-       " |      3       |        3        |  735  |\n",
-       " |      1       |        3        |   66  |\n",
-       " |      3       |        2        |  206  |\n",
-       " |      0       |        3        |   7   |\n",
-       " |      2       |        1        |   66  |\n",
-       " |      0       |        1        |   20  |\n",
-       " |      0       |        0        |  961  |\n",
+       " |  automobile  |       dog       |   4   |\n",
+       " |     cat      |       bird      |   78  |\n",
+       " |     bird     |       dog       |   47  |\n",
+       " |  automobile  |    automobile   |  952  |\n",
+       " |     bird     |    automobile   |   21  |\n",
+       " |     dog      |       bird      |   50  |\n",
+       " |     cat      |    automobile   |   33  |\n",
+       " |     cat      |       cat       |  712  |\n",
+       " |     cat      |       dog       |  177  |\n",
+       " |     dog      |       dog       |  682  |\n",
        " +--------------+-----------------+-------+\n",
        " [16 rows x 3 columns]\n",
+       " Note: Only the head of the SFrame is printed.\n",
+       " You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns., 'f1_score': 0.7919269325124753, 'log_loss': 0.5499077775752202, 'precision': 0.79335838339276, 'recall': 0.792, 'roc_curve': Columns:\n",
+       " \tthreshold\tfloat\n",
+       " \tfpr\tfloat\n",
+       " \ttpr\tfloat\n",
+       " \tp\tint\n",
+       " \tn\tint\n",
+       " \tclass\tint\n",
+       " \n",
+       " Rows: 400004\n",
+       " \n",
+       " Data:\n",
+       " +-----------+----------------+-----+------+------+-------+\n",
+       " | threshold |      fpr       | tpr |  p   |  n   | class |\n",
+       " +-----------+----------------+-----+------+------+-------+\n",
+       " |    0.0    |      1.0       | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   1e-05   |     0.982      | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   2e-05   | 0.978333333333 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   3e-05   | 0.976666666667 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   4e-05   |     0.973      | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   5e-05   | 0.971333333333 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   6e-05   | 0.968333333333 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   7e-05   | 0.965333333333 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   8e-05   | 0.962333333333 | 1.0 | 1000 | 3000 |   0   |\n",
+       " |   9e-05   |     0.959      | 1.0 | 1000 | 3000 |   0   |\n",
+       " +-----------+----------------+-----+------+------+-------+\n",
+       " [400004 rows x 6 columns]\n",
        " Note: Only the head of the SFrame is printed.\n",
        " You can use print_rows(num_rows=m, num_columns=n) to print more rows and columns.}"
       ]
@@ -787,6 +814,15 @@
    "source": [
     "deep_features_model.evaluate(image_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
