Regression week 1 assignment

--- a/Specializations/Machine Learning/Regression/Week 1/Assignment/week-1-simple-regression-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 1/Assignment/week-1-simple-regression-assignment-blank.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -50,11 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] \u001b[1;32m1449450559 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1449450559 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
+      "\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-58439 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1449450559.log\n",
+      "[INFO] GraphLab Server Version: 1.7.1\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -75,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -104,11 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average price via method 1: 540088.141905\n",
+      "average price via method 2: 540088.141905\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's compute the mean of the House Prices in King County in 2 different ways.\n",
     "prices = sales['price'] # extract the price column of the sales SFrame -- this is now an SArray\n",
@@ -131,11 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum of price squared is: 9.21732513355e+15\n"
+     ]
+    }
+   ],
    "source": [
     "# if we want to multiply every price by 0.5 it's a simple as:\n",
     "half_prices = 0.5*prices\n",
@@ -170,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -178,14 +208,20 @@
    "source": [
     "def simple_linear_regression(input_feature, output):\n",
     "    # compute the mean of  input_feature and output\n",
+    "    meanInput = input_feature.mean()\n",
+    "    meanOutput = output.mean()\n",
     "    \n",
     "    # compute the product of the output and the input_feature and its mean\n",
+    "    productInputOutputMean = (input_feature.sum() * output.sum()) / input_feature.size()\n",
     "    \n",
     "    # compute the squared value of the input_feature and its mean\n",
+    "    squaredInputMean = (input_feature.sum() * input_feature.sum()) / input_feature.size()\n",
     "    \n",
     "    # use the formula for the slope\n",
+    "    slope = ((input_feature * output).sum() - productInputOutputMean)/((input_feature * input_feature).sum() - (squaredInputMean))\n",
     "    \n",
     "    # use the formula for the intercept\n",
+    "    intercept = meanOutput - slope * meanInput\n",
     "    \n",
     "    return (intercept, slope)"
    ]
@@ -199,12 +235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: 1.0\n",
+      "Slope: 1\n"
+     ]
+    }
+   ],
    "source": [
     "test_feature = graphlab.SArray(range(5))\n",
     "test_output = graphlab.SArray(1 + 1*test_feature)\n",
@@ -222,11 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: -47116.0765749\n",
+      "Slope: 281.958838568\n"
+     ]
+    }
+   ],
    "source": [
     "sqft_intercept, sqft_slope = simple_linear_regression(train_data['sqft_living'], train_data['price'])\n",
     "\n",
@@ -250,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +312,7 @@
    "source": [
     "def get_regression_predictions(input_feature, intercept, slope):\n",
     "    # calculate the predicted values:\n",
-    "    \n",
+    "    predicted_values = intercept + slope * input_feature\n",
     "    return predicted_values"
    ]
   },
@@ -273,11 +327,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated price for a house with 2650 squarefeet is $700074.85\n"
+     ]
+    }
+   ],
    "source": [
     "my_house_sqft = 2650\n",
     "estimated_price = get_regression_predictions(my_house_sqft, sqft_intercept, sqft_slope)\n",
@@ -302,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -310,11 +372,14 @@
    "source": [
     "def get_residual_sum_of_squares(input_feature, output, intercept, slope):\n",
     "    # First get the predictions\n",
-    "\n",
+    "    estimated_price = get_regression_predictions(input_feature, intercept, slope)\n",
+    "    \n",
     "    # then compute the residuals (since we are squaring it doesn't matter which order you subtract)\n",
-    "\n",
+    "    residuals = (output - estimated_price)\n",
+    "    \n",
     "    # square the residuals and add them up\n",
-    "\n",
+    "    RSS = sum(residuals * residuals)\n",
+    "    \n",
     "    return(RSS)"
    ]
   },
@@ -327,11 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "print get_residual_sum_of_squares(test_feature, test_output, test_intercept, test_slope) # should be 0.0"
    ]
@@ -347,11 +420,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Square Feet is : 1.20191835632e+15\n"
+     ]
+    }
+   ],
    "source": [
     "rss_prices_on_sqft = get_residual_sum_of_squares(train_data['sqft_living'], train_data['price'], sqft_intercept, sqft_slope)\n",
     "print 'The RSS of predicting Prices based on Square Feet is : ' + str(rss_prices_on_sqft)"
@@ -375,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +464,8 @@
    "source": [
     "def inverse_regression_predictions(output, intercept, slope):\n",
     "    # solve output = intercept + slope*input_feature for input_feature. Use this equation to compute the inverse predictions:\n",
-    "\n",
+    "    estimated_feature = (output - intercept) / slope \n",
+    "    \n",
     "    return estimated_feature"
    ]
   },
@@ -398,11 +480,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated squarefeet for a house worth $800000.00 is 3004\n"
+     ]
+    }
+   ],
    "source": [
     "my_house_price = 800000\n",
     "estimated_squarefeet = inverse_regression_predictions(my_house_price, sqft_intercept, sqft_slope)\n",
@@ -426,14 +516,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: 109473.180469\n",
+      "Slope: 127588.952175\n"
+     ]
+    }
+   ],
    "source": [
     "# Estimate the slope and intercept for predicting 'price' based on 'bedrooms'\n",
-    "\n"
+    "\n",
+    "bedrooms_intercept, bedrooms_slope = simple_linear_regression(train_data['bedrooms'], train_data['price'])\n",
+    "\n",
+    "print \"Intercept: \" + str(bedrooms_intercept)\n",
+    "print \"Slope: \" + str(bedrooms_slope)"
    ]
   },
   {
@@ -454,25 +557,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Bedrooms is : 4.93364582868e+14\n"
+     ]
+    }
+   ],
    "source": [
-    "# Compute RSS when using bedrooms on TEST data:\n"
+    "# Compute RSS when using bedrooms on TEST data:\n",
+    "rss_prices_on_bedrooms_test = get_residual_sum_of_squares(test_data['bedrooms'], test_data['price'], bedrooms_intercept, bedrooms_slope)\n",
+    "print 'The RSS of predicting Prices based on Bedrooms is : ' + str(rss_prices_on_bedrooms_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RSS of predicting Prices based on Square Feet is : 2.75402936247e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute RSS when using squarfeet on TEST data:\n",
+    "rss_prices_on_sqft_test = get_residual_sum_of_squares(test_data['sqft_living'], test_data['price'], sqft_intercept, sqft_slope)\n",
+    "print 'The RSS of predicting Prices based on Square Feet is : ' + str(rss_prices_on_sqft_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Compute RSS when using squarfeet on TEST data:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
